--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/item_text"
-        android:text="Buy Oranges"
-        android:textSize="18sp"
-        android:layout_margin="8dp"
-        android:paddingStart="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:fontFamily="@font/roboto"
+        android:paddingStart="8dp"
+        android:text="Buy Oranges"
+        android:textColor="@color/BLACK"
+        android:textSize="18sp" />
 
 </RelativeLayout>
