--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#4285F4</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#4285F4</color>
     <color name="white">#FFFFFF</color>
+    <color name="BLACK">#212121</color>
 </resources>
