--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MainActivity"
+    tools:context=".activties.MainActivity"
     android:id="@+id/drawer_layout">
     
     <RelativeLayout
@@ -37,18 +37,18 @@
                 android:textColor="#232323"
                 android:textSize="28sp" />
 
-            <ImageButton
-                android:id="@+id/layout_change_buttton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="0dp"
-                android:background="@drawable/ic_twotone_view_agenda_24px"
-                android:clickable="true"
-                android:focusable="true"
-                />
+            <!--<ImageButton-->
+                <!--android:id="@+id/layout_change_buttton"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginEnd="8dp"-->
+                <!--android:layout_marginRight="0dp"-->
+                <!--android:background="@drawable/ic_twotone_view_agenda_24px"-->
+                <!--android:clickable="true"-->
+                <!--android:focusable="true"-->
+                <!--/>-->
 
         </RelativeLayout>
 
