--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -17,11 +17,16 @@
         android:textColor="@color/BLACK"
         android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/delete"
+    <!--<Button-->
+        <!--android:id="@+id/delete"-->
+        <!--android:layout_alignEnd="@id/item_text"-->
+        <!--android:background="@drawable/ic_delete_blue_24dp"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp" />-->
+    <CheckBox
+        android:id="@+id/checkbox"
         android:layout_alignEnd="@id/item_text"
-        android:background="@drawable/ic_delete_blue_24dp"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
