--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,6 +8,9 @@
         <item
             android:id="@+id/completed_list"
             android:title="Completed" />
+        <item
+            android:id="@+id/nav_credit"
+            android:title="Credits" />
 
     </group>
 </menu>
